# snagit-clone

./: README.md  install-desktop.sh  pyproject.toml  run.sh
.claude/: settings.local.json
annotator/: __main__.py  canvas.py  handles.py  history.py  icons.py  items.py  library.py  mainwindow.py  properties.py
pasteup/: __init__.py  __main__.py  canvas.py  handles.py  items.py  library.py  mainwindow.py  model.py
